Ensure text visibility while webfonts are loading

--- a/assets/scss/base/_fonts.scss
+++ b/assets/scss/base/_fonts.scss
@@ -13,5 +13,6 @@ $fonts: (
          url('#{$font-path}.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
   }
 }
